--- a/public/locales/uk/translations.json
+++ b/public/locales/uk/translations.json
@@ -39,6 +39,28 @@
       "tooLong": "Пароль надто довгий",
       "min": "Пароль повинен містити щонайменше 5 символів",
       "max": "Пароль надто довгий"
+    },
+    "title": {
+      "required": "Назва обов’язкова",
+      "max": "Назва повинна містити не більше 255 символів"
+    },
+    "location": {
+      "max": "Місце проведення повинно містити не більше 255 символів"
+    },
+    "startDate": {
+      "required": "Дата початку обов’язкова"
+    },
+    "endDate": {
+      "required": "Дата завершення обов’язкова"
+    },
+    "maxParticipants": {
+      "min": "Максимальна кількість учасників має бути щонайменше 1"
+    },
+    "minParticipants": {
+      "min": "Мінімальна кількість учасників має бути щонайменше 1"
+    },
+    "price": {
+      "min": "Ціна повинна бути невід’ємним числом"
     }
   },
 
