--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -76,7 +76,8 @@
     "pageNames": {
       "allEvents": "All events",
       "myEvents": "My events",
-      "profile": "Profile"
+      "profile": "Profile",
+      "userProfile": "User profile"
     }
   },
 
